# lib/db/src/schema/chat.ts
@@ -12,10 +12,9 @@ export const publicChatMessagesTable = pgTable("public_chat_messages", {
 
 export const adminDirectChatMessagesTable = pgTable("admin_direct_chat_messages", {
   id: serial("id").primaryKey(),
+  conversationUserId: integer("conversation_user_id").references(() => usersTable.id, { onDelete: "cascade" }).notNull(),
   senderId: integer("sender_id").references(() => usersTable.id, { onDelete: "cascade" }).notNull(),
-  recipientId: integer("recipient_id").references(() => usersTable.id, { onDelete: "cascade" }).notNull(),
   content: text("content").notNull(),
-  isRead: boolean("is_read").notNull().default(false),
   isDeleted: boolean("is_deleted").notNull().default(false),
   editedAt: timestamp("edited_at", { withTimezone: true }),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
